# agentic-stack

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yaml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  mergify.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pre-commit.yml  release-wheels.yml  wheels.yml
docs/: index.md
docs/adr/: ADR-01_core.md  ADR-02_response_store.md
docs/api/: index.md
docs/community/: index.md
docs/deployment/: configuration.md  observability.md
docs/examples/: hosted-mcp-examples.md  web-search-examples.md
docs/features/: built-in-tools.md  hosted-mcp.md  statefulness.md  web-search.md
docs/getting-started/: installation.md  quickstart.md
docs/mkdocs/overrides/: main.html
docs/mkdocs/overrides/partials/: toc-item.html
docs/mkdocs/stylesheets/: extra.css
docs/reference/: configuration.md
docs/snippets/: mcp_discover_servers_tools_curl.txt  openai_client_local_gateway.py  serve_external_upstream_cmd.txt
docs/usage/: command-reference.md  running-the-gateway.md
responses/: MANIFEST.in  README.md  pyproject.toml  setup.py
responses/python/agentic_stack/: db.py  lm.py  lm_failures.py
responses/python/agentic_stack/configs/: __init__.py  builders.py  defaults.py  mock_llm.py  runtime.py  sources.py  startup.py
responses/python/agentic_stack/entrypoints/: _helper_runtime.py  _serve_utils.py  _state.py  api.py  gunicorn_conf.py  llm.py  mcp_runtime.py  serve.py  vllm_cli.py
responses/python/agentic_stack/entrypoints/_serve/: _runtime.py  _spec.py
responses/python/agentic_stack/entrypoints/gateway/: _app.py
responses/python/agentic_stack/entrypoints/vllm/: _adapter.py  _runtime.py  _spec.py
responses/python/agentic_stack/mcp/: __init__.py  config.py  fastmcp_runtime.py  gateway_toolset.py  hosted_registry.py  policy.py  resolver.py  runtime_client.py  runtime_toolset.py  types.py  utils.py
responses/python/agentic_stack/observability/: __init__.py  metrics.py  tracing.py
responses/python/agentic_stack/responses_core/: __init__.py  composer.py  models.py  normalizer.py  sse.py  store.py
responses/python/agentic_stack/routers/: mcp.py  serving.py  upstream_proxy.py
responses/python/agentic_stack/tools/: __init__.py  bootstrap.py  ids.py  profile_resolution.py  runtime.py
responses/python/agentic_stack/tools/base/: config.py  runtime.py  types.py
responses/python/agentic_stack/tools/code_interpreter/: CLAUDE.md  README.md  __init__.py  package.json  worker.ts
responses/python/agentic_stack/tools/code_interpreter/src/: index.test.ts  index.ts  pyodide-manager.ts  repl.ts  server.test.ts  server.ts  types.ts  worker-pool.ts  worker.ts
responses/python/agentic_stack/tools/web_search/: config.py  executor.py  mcp_provision.py  page_cache.py  profiles.py  runtime.py  tool.py  types.py
responses/python/agentic_stack/tools/web_search/adapters/: __init__.py  base.py  duckduckgo_common.py  exa_mcp.py  fetch_mcp.py
responses/python/agentic_stack/types/: api.py  openai.py
responses/python/agentic_stack/utils/: __init__.py  cache.py  cassette_replay.py  crypt.py  dates.py  exceptions.py  handlers.py  io.py  logging.py  loguru_otlp_handler.py  types.py  urls.py
responses/tests/: conftest.py  test_app_extensions.py  test_code_interpreter.py  test_gateway_cassette_replay.py  test_gateway_statefulness.py  test_gateway_tool_metrics.py  test_integrated_app.py  test_integrated_runtime.py  test_integrated_spec.py  test_mcp.py  test_mcp_runtime_client.py  test_mcp_runtime_entrypoint.py  test_observability_metrics.py  test_openresponses_conformance.py  test_packaging_contract.py  test_pydantic_ai_normalizer.py  test_response_composer.py  test_response_store.py  test_runtime_config.py  test_serve_cli_parsing.py  test_serve_spec.py  test_serve_supervisor.py  test_serve_utils.py  test_store_schema_init_multicore.py  test_upstream_proxy.py  test_vllm_cli.py  test_web_search.py
scripts/ci/: bootstrap_pyodide_cache.py  container_smoke_test.py  prebuild_code_interpreter_linux_x86_64.sh
src/agentic_api/: __init__.py
src/agentic_api/config/: runtime.py
src/agentic_api/core/: proxy.py
src/agentic_api/entrypoints/: app.py  cli.py  serve.py  vllm_cli.py
src/agentic_api/routers/: responses.py
src/agentic_stack/config/: runtime.py
src/agentic_stack/core/: proxy.py
src/agentic_stack/entrypoints/: app.py  cli.py  serve.py  vllm_cli.py
src/agentic_stack/routers/: responses.py
tests/: conftest.py  test_proxy.py  test_vllm_cli.py
