[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-api"
version = "0.1.0"
description = "Stateful API logic for agentic applications using vLLM"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Agentic API Community" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.scripts]
agentic-api = "agentic_api.entrypoints.cli:main"
vllm = "agentic_api.entrypoints.vllm_cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.anyio]
backend = "asyncio"

[project.urls]
Homepage = "https://github.com/vllm-project/agentic-api"
Repository = "https://github.com/vllm-project/agentic-api"
Issues = "https://github.com/vllm-project/agentic-api/issues"
Documentation = "https://github.com/vllm-project/agentic-api"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "anyio[trio]>=4.4.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.27.0",
    "asgi-lifespan>=2.1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-autorefs>=1.0.0",
    "mkdocs-awesome-nav>=0.11.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=0.25.0",
]
